vlib/v/checker/tests/cast_to_byte_err.out
vlib/v/checker/tests/cast_to_byte_err.vv:10:7: error: cannot cast type `string` to `byte`
    8 | fn main() {
    9 |     // should be errors:
   10 |     _ := byte('hello')
      |          ~~~~~~~~~~~~~
   11 |     _ := byte(SAlias('hello'))
   12 |
vlib/v/checker/tests/cast_to_byte_err.vv:11:7: error: cannot cast type `SAlias` to `byte`
    9 |     // should be errors:
   10 |     _ := byte('hello')
   11 |     _ := byte(SAlias('hello'))
      |          ~~~~~~~~~~~~~~~~~~~~~
   12 |
   13 |     // should be allowed:
